updated schema for trial as form1 wasn't a good name, also fixed css and html layouts with issues of overflow

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -9,7 +9,7 @@ body {
 
 .footer {
     margin-top: 100px;
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     overflow: hidden;
